Consolidate integration test runtime on AtlasInProcessBaseIT and harden startup
- migrate remaining web integration tests from AtlasDockerIntegrationTest to AtlasInProcessBaseIT\n- decouple legacy test clients (OKClient/ESUtil) from Docker-specific static URLs and configure at runtime\n- make DebugMetricsWrapper metrics registration idempotent to avoid duplicate source startup failures\n- make ConfigReader resilient when atlas-application.properties is absent on IDE test classpath\n- include related test/logging/config updates already staged in this index